--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,11 @@ dependencies = [
     "numpy (>=2.3.1,<3.0.0)",
     "astropy (>=7.1.0,<8.0.0)",
     "scipy (>=1.16.0,<2.0.0)",
-    "notebook (>=7.4.4,<8.0.0)"
+    "notebook (>=7.4.4,<8.0.0)",
+    "arviz (>=0.22.0,<0.23.0)",
+    "corner (>=2.2.3,<3.0.0)",
+    "pymc (>=5.23.0,<6.0.0)",
+    "pymc-ext (>=1.0.1,<2.0.0)"
 ]
 package-mode = false
 
